Fix footer edge and spacing, fix collections active tile

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
 /* Subpage styles */
 .subpage {
   margin-top: 6rem;
+  margin-bottom: 6rem;
   flex: 1;
 }
 
@@ -143,8 +144,8 @@ body {
   left: 0;
   right: 0;
   margin: 0 auto;
-  width: 100%;
-  background: #fff;
+  width: 95%;
+  background: linear-gradient(to top, #fff 90%, rgba(255, 255, 255, 0));
   padding: 2rem 0;
   z-index: 1000;
   max-width: 1100px;
